<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  	<modelVersion>4.0.0</modelVersion>
  	<groupId>uy.com.uma</groupId>
  	<artifactId>logicgame</artifactId>
  	<version>0.0.8</version>
  	<name>logicgame</name>
  	<description>Nucleo central de la implementación del juego de lógica (logicgame)</description>
  	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
   		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
	    	<groupId>uy.com.uma</groupId>
	    	<artifactId>comun</artifactId>
    		<version>0.0.6</version>
		</dependency>
		<dependency>
	    	<groupId>org.apache.logging.log4j</groupId>
	    	<artifactId>log4j-api</artifactId>
    		<version>2.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
	    	<artifactId>log4j-core</artifactId>
	    	<version>2.6.1</version>
	  	</dependency>
	  	<dependency>
    		<groupId>org.apache.ant</groupId>
    		<artifactId>ant</artifactId>
    		<version>1.9.7</version>
		</dependency>
		<dependency>
    		<groupId>org.hibernate</groupId>
    		<artifactId>hibernate-core</artifactId>
    		<version>4.3.11.Final</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-commons-annotations</artifactId>
		    <version>3.2.0.Final</version>
		</dependency>
		<dependency>
		    <groupId>org.hibernate.javax.persistence</groupId>
		    <artifactId>hibernate-jpa-2.1-api</artifactId>
		    <version>1.0.0.Final</version>
		</dependency>
        <dependency>
      		<groupId>org.postgresql</groupId>
      		<artifactId>postgresql</artifactId>
      		<version>9.4-1201-jdbc4</version>
    	</dependency>
		<dependency>
    		<groupId>javax.mail</groupId>
    		<artifactId>mail</artifactId>
    		<version>1.4.7</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
		<dependency>
		    <groupId>javax.activation</groupId>
		    <artifactId>activation</artifactId>
		    <version>1.1.1</version>
		</dependency>
	</dependencies>
	<build>
		<resources>
	        <resource>
	            <directory>src/main/java</directory>
	            <includes>
	                <include>**/*.properties</include>
	            </includes>
	        </resource>
    	</resources>
	</build>
</project>